# Gramadan

./: .gitignore  .mypy.ini  comparison.sh  test_compare.py
.github/: python-publish.yml
.github/workflows/: python-publish.yml
Gramadan/: Verb.cs  __init__.py  adjective.py  features.py  noun.py  np.py  opers.py  plural_info.py  possessive.py  pp.py  preposition.py  printer_neid.py  singular_info.py  utils.py  verb.py  vp.py
Gramadan/tester/: program.py
Python/: README-python.txt  README.md  comparison.sh  pyproject.toml  setup.cfg
Python/gramadan/: __init__.py  opers.py  plural_info.py  singular_info.py
Python/gramadan/v2/: database.py  entity.py  features.py  noun.py  noun_empirical.py  opers.py  plural_info.py  singular_info.py  verb.py
Python/tests/python/: test_noun.py
Tester/: Consistency.cs  Gadaiocht.cs  Program.cs  QualityControl.cs  TestPossessives.cs
