[metadata]
name = gramadan-py
version = attr: gramadan.__version__
description = Pure Python implementation of michmech's .NET Gramadán utility for manipulating the Irish National Morphology Database
author = Phil Weir (Python conversion Michal Měchura's work)
author_email = phil.t.weir@gmail.com
license = "MIT"

[options]
packages =
  gramadan
install_requires =
  lxml

[options.extras_require]
test = pytest, lxml-stubs

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
